# nomad

./: .gitignore  Makefile  README  README.md  gen.sh  sync-data.sh  test.sh
Code/competitor/: CMakeLists.txt  ccdr1-mpi-omp.cpp  dsgdpp.cpp  pmf-mpi.h  pmf.h  sgd-mpi-omp.cpp  smat.cpp  smat.h  util-mpi.cpp  util.cpp  util.h
Code/libmf-1.0/: Makefile  README
Code/libmf-1.0/src/: convert.cpp  mf.cpp  train.cpp
Code/nomad/: CMakeLists.txt  CheckpointState.cpp  CheckpointState.h  main.cpp  msg_type.h  nb_checkpoint.cpp  nb_checkpoint_master.cpp  nb_data.cpp  nb_init.cpp  nb_main.cpp  nb_master.cpp  nb_net_control.cpp  nb_sendrecv.cpp  nomad.hpp  nomad_body.h  nomad_body.hpp  nomad_body2.hpp  nomad_double2.cpp  nomad_option.cpp  nomad_option.h  permute.cpp  pl-dis.hpp  pool.cpp  pool.h  pool.hpp  realdata_body2.hpp  synthgen-conf.cpp  synthgen.cpp  test.cpp
Scripts/: convert.py  draw_cp.py  make_cp_table.py  pick-info-csv.sh  show_cp_recover.py
Scripts/aws/: aws_ccdpp.py  aws_dsgd_bold.py  aws_dsgd_bold_wor.py  aws_dsgdpp.py  aws_nomad.py
Scripts/stampede/multi/: stampede_multi_ccdpp.py  stampede_multi_dsgd_bold_wor.py  stampede_multi_dsgdpp.py  stampede_multi_nomad.py
Scripts/stampede/single/: stampede_single_ccdpp.py  stampede_single_fpsgd.py  stampede_single_nomad.py
Scripts/stampede/synth/: stampede_synth_ccdpp.py  stampede_synth_dsgd_bold_wor.py  stampede_synth_nomad.py
Scripts/stampede/varydim/: stampede_varydim_nomad.py
Scripts/stampede/varyreg/: stampede_varyreg_ccdpp.py  stampede_varyreg_dsgd_bold_wor.py  stampede_varyreg_nomad.py
